@@ -51,10 +51,12 @@ lintian (2.5.53) UNRELEASED; urgency=medium
   * checks/debian-readme.{pm,desc}:
     + [CL] Ensure readme-debian-contains-debmake-template also checks
       for templates "Automatically generated by debmake".
-  * checks/description.desc:
+  * checks/description.{desc,pm}:
     + [CL] Clarify explanation of description-starts-with-leading-spaces
       tag. Thanks to Taylor Kline <taylor.kline@utexas.edu> for the report
       and patch.  (Closes: #849622)
+    + [NT] Skip capitalization-error-in-description-synopsis for
+      auto-generated packages (such as dbgsym packages).
   * checks/fields.pm:
     + [CL] Ensure that python3-foo packages have "Section: python", not
       just python2-foo.  (Closes: #870272)
